tests/programs/errors/duplicate_function.tiny
fn foo() -> int { return 1; }
fn foo() -> int { return 2; }
print(foo());
