tests/programs/errors/duplicate_function.expected
Error: function 'foo' is already declared (line 2)

1 error(s)
